[package]
name = "tileserver-rs"
version = "0.1.0"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
routerify = "2"
hyper = "0.14"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libsqlite3-sys = "0.22.2"
rusqlite = { version = "0.25.3", features = ["bundled", "blob"] }
futures = "0.3"
moka = { version = "0.5", features = ["future"] }
