[package]
name = "tileserver-rs"
version = "0.1.0"
edition = "2018"
license = "MIT"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libsqlite3-sys = "0.22.2"
rusqlite = { version = "0.25.3", features = ["bundled", "blob"] }
futures = "0.3"
moka = { version = "0.5", features = ["future"] }
r2d2_sqlite = "0.18.0"
r2d2 = "0.8.9"
thiserror = "1.0"
flate2 = "1.0"
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4"
mimalloc = { version = "*" }
derive_more = "0.99.16"
actix-web-static-files = "3.0"

[build-dependencies]
actix-web-static-files = "3.0"

